# ReflectC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: default.yml
examples/: CMakeLists.txt
examples/benchmark/: .gitignore  CMakeLists.txt  benchmarks.c  gen_synthetic.py
examples/inlinetest/: CMakeLists.txt  inline.c
examples/sample/: CMakeLists.txt  sample.c
include/: reflect.h
merge/: merge.py
plugin/: CMakeLists.txt  ReflectClangPlugin.cpp  ReflectConsumer.cpp  ReflectConsumer.hpp  ReflectPluginAction.cpp  ReflectPluginAction.hpp  ReflectVisitor.cpp  ReflectVisitor.hpp  ReflectionDataSerializer.cpp  ReflectionDataSerializer.hpp  ReflectionTypes.cpp  ReflectionTypes.hpp
src/: hashtable.c  reader.c  reflect.c
tests/: CMakeLists.txt  test_reflect.c
